tests/snapshots/cli__intoto_agent-operator-unknown.snap
---
source: tests/cli.rs
expression: value
---
_type: "https://in-toto.io/Statement/v1"
predicate:
  assessments:
    - change_id: "github:acme/api:pr:421"
      reason: Effective human author is unknown; independence cannot be established.
      rule_id: ACC001
      status: unknown
    - change_id: "github:acme/api:pr:421"
      reason: Effective human author is unknown; independence cannot be established.
      rule_id: ACC002
      status: unknown
    - change_id: "github:acme/api:pr:421"
      reason: Effective human author is unknown; independence cannot be established.
      rule_id: ACC003
      status: unknown
    - change_id: "github:acme/api:pr:421"
      reason: Agent authorship is recorded but its human operator is unknown.
      rule_id: ACC006
      status: fail
    - change_id: "github:acme/api:pr:421"
      reason: No agent reviewed the current head.
      rule_id: ACC007
      status: not_applicable
    - change_id: "github:acme/api:pr:421"
      reason: A human approved the current head.
      rule_id: ACC008
      status: not_applicable
    - change_id: "github:acme/api:pr:421"
      reason: Agent approvals do not satisfy independence under this policy.
      rule_id: ACC009
      status: not_applicable
    - change_id: "github:acme/api:pr:421"
      reason: Agent approvals do not satisfy independence under this policy.
      rule_id: ACC010
      status: not_applicable
  events:
    actors:
      "agent:claude-code":
        display_name: Claude Code
        kind: agent
        vendor: anthropic
      "agent:codex":
        display_name: Codex
        kind: agent
        vendor: openai
      "github:alice":
        display_name: Alice
        kind: human
        vendor: ~
      "github:bob":
        display_name: Bob
        kind: human
        vendor: ~
      "github:ci":
        display_name: CI
        kind: bot
        vendor: ~
    attestations: {}
    changes:
      - agent_operator: ~
        author:
          actor_id: "agent:claude-code"
          provenance:
            - kind: observed
              ref: "https://api.github.com/repos/acme/api/pulls/421"
              source: github_api
        commits:
          - author:
              actor_id: "github:alice"
              provenance:
                - kind: observed
                  ref: "https://api.github.com/repos/acme/api/pulls/421"
                  source: github_api
            sha: head
        forge: github
        forge_author:
          actor_id: "github:alice"
          provenance:
            - kind: observed
              ref: "https://api.github.com/repos/acme/api/pulls/421"
              source: github_api
        head_sha: head
        id: "github:acme/api:pr:421"
        labels: []
        merge_commit_sha: merge
        merged_at: "2026-08-03T12:00:00Z"
        merger:
          actor_id: "github:alice"
          provenance:
            - kind: observed
              ref: "https://api.github.com/repos/acme/api/pulls/421"
              source: github_api
        opened_at: "2026-08-01T12:00:00Z"
        provenance:
          - kind: observed
            ref: "https://api.github.com/repos/acme/api/pulls/421"
            source: github_api
        repository: acme/api
        reviews:
          - actor_id: "github:bob"
            agent: ~
            at: "2026-08-02T12:00:00Z"
            commit_sha: head
            id: "1"
            provenance:
              - kind: observed
                ref: "https://api.github.com/repos/acme/api/pulls/421/reviews/1"
                source: github_api
            state: approved
        reviews_complete: true
        title: Example change
        url: "https://github.com/acme/api/pull/421"
    repository: acme/api
    version: "0.2"
    window:
      complete: true
      from: "2026-08-01T00:00:00Z"
      reason: ~
      to: "2026-08-31T23:59:59Z"
  findings:
    - actor_ids:
        - "agent:claude-code"
      change_id: "github:acme/api:pr:421"
      disposition:
        decided_at: ~
        expires_at: ~
        owner: ~
        rationale: ~
        remediated_at: ~
        status: open
      explanation: Agent authorship is recorded but its human operator is unknown.
      id: acc-a77f6c869b9816b1
      legacy_ids:
        - acc-3031f6b4807c5738
      provenance:
        - kind: observed
          ref: "https://api.github.com/repos/acme/api/pulls/421"
          source: github_api
        - kind: observed
          ref: "https://api.github.com/repos/acme/api/pulls/421/reviews/1"
          source: github_api
      rule: unknown_agent_operator
      rule_id: ACC006
      severity: warning
  generated:
    source_digest: "sha256:5201ea5f5284adedf85d9f1fc5fe01b23a2a31e9475c2796e82a441de48c5985"
    tool: agent-change-control
    version: 0.5.1
  policy:
    agent_review:
      labels: []
      minimum_evidence: signed
      require:
        - operator
        - provider
        - identity
      satisfies_independence: false
    fail_on: medium
    minimum_authorship_evidence: derived
    minimum_review_evidence: observed
    rules:
      agent_approval_not_independent:
        enabled: true
        severity: high
      agent_approval_recorded:
        enabled: true
        severity: info
      agent_approval_unsigned:
        enabled: true
        severity: warning
      agent_change_without_independent_human:
        enabled: true
        severity: high
      approver_is_author:
        enabled: true
        severity: high
      merged_without_independent_approval:
        enabled: true
        severity: high
      same_vendor_write_and_review:
        enabled: true
        severity: high
      unknown_agent_operator:
        enabled: true
        severity: warning
    version: "0.3"
  summary:
    agent_authored: 1
    agent_operator_unknown: 1
    changes: 1
    clean: 0
    findings: 1
    human_authored: 0
    indeterminate: 0
    with_findings: 1
  version: "0.3"
predicateType: "https://noru.tech/spec/ai-change-provenance/v0.3"
subject:
  - digest:
      gitCommit: head
    name: "github:acme/api:pr:421"
  - digest:
      gitCommit: merge
    name: "github:acme/api:pr:421:merge"
