tests/snapshots/cli__intoto_incomplete-window.snap
---
source: tests/cli.rs
expression: value
---
_type: "https://in-toto.io/Statement/v1"
predicate:
  assessments:
    - change_id: "github:acme/api:pr:421"
      reason: Effective author is not an agent.
      rule_id: ACC001
      status: not_applicable
    - change_id: "github:acme/api:pr:421"
      reason: Review collection is incomplete.
      rule_id: ACC002
      status: unknown
    - change_id: "github:acme/api:pr:421"
      reason: Review collection is incomplete; missing independent approval cannot be established.
      rule_id: ACC003
      status: unknown
    - change_id: "github:acme/api:pr:421"
      reason: Effective author is not an agent.
      rule_id: ACC006
      status: not_applicable
    - change_id: "github:acme/api:pr:421"
      reason: No agent reviewed the current head.
      rule_id: ACC007
      status: not_applicable
    - change_id: "github:acme/api:pr:421"
      reason: Effective author is not an agent.
      rule_id: ACC008
      status: not_applicable
    - change_id: "github:acme/api:pr:421"
      reason: Agent approvals do not satisfy independence under this policy.
      rule_id: ACC009
      status: not_applicable
    - change_id: "github:acme/api:pr:421"
      reason: Agent approvals do not satisfy independence under this policy.
      rule_id: ACC010
      status: not_applicable
  events:
    actors:
      "agent:claude-code":
        display_name: Claude Code
        kind: agent
        vendor: anthropic
      "agent:codex":
        display_name: Codex
        kind: agent
        vendor: openai
      "github:alice":
        display_name: Alice
        kind: human
        vendor: ~
      "github:bob":
        display_name: Bob
        kind: human
        vendor: ~
      "github:ci":
        display_name: CI
        kind: bot
        vendor: ~
    attestations: {}
    changes:
      - agent_operator: ~
        author:
          actor_id: "github:alice"
          provenance:
            - kind: observed
              ref: "https://api.github.com/repos/acme/api/pulls/421"
              source: github_api
        commits:
          - author:
              actor_id: "github:alice"
              provenance:
                - kind: observed
                  ref: "https://api.github.com/repos/acme/api/pulls/421"
                  source: github_api
            sha: head
        forge: github
        forge_author:
          actor_id: "github:alice"
          provenance:
            - kind: observed
              ref: "https://api.github.com/repos/acme/api/pulls/421"
              source: github_api
        head_sha: head
        id: "github:acme/api:pr:421"
        labels: []
        merge_commit_sha: ~
        merged_at: "2026-08-03T12:00:00Z"
        merger:
          actor_id: "github:alice"
          provenance:
            - kind: observed
              ref: "https://api.github.com/repos/acme/api/pulls/421"
              source: github_api
        opened_at: "2026-08-01T12:00:00Z"
        provenance:
          - kind: observed
            ref: "https://api.github.com/repos/acme/api/pulls/421"
            source: github_api
        repository: acme/api
        reviews: []
        reviews_complete: false
        title: Example change
        url: "https://github.com/acme/api/pull/421"
    repository: acme/api
    version: "0.2"
    window:
      complete: false
      from: "2026-08-01T00:00:00Z"
      reason: Review collection unavailable
      to: "2026-08-31T23:59:59Z"
  findings: []
  generated:
    source_digest: "sha256:384d93e4dc2f89c30b480abf9f97bece41c36fb98d03750408d1616e1472200a"
    tool: agent-change-control
    version: 0.6.0
  policy:
    agent_review:
      labels: []
      minimum_evidence: signed
      require:
        - operator
        - provider
        - identity
      satisfies_independence: false
    fail_on: medium
    minimum_authorship_evidence: derived
    minimum_review_evidence: observed
    rules:
      agent_approval_not_independent:
        enabled: true
        severity: high
      agent_approval_recorded:
        enabled: true
        severity: info
      agent_approval_unsigned:
        enabled: true
        severity: warning
      agent_change_without_independent_human:
        enabled: true
        severity: high
      approver_is_author:
        enabled: true
        severity: high
      merged_without_independent_approval:
        enabled: true
        severity: high
      same_vendor_write_and_review:
        enabled: true
        severity: high
      unknown_agent_operator:
        enabled: true
        severity: warning
    version: "0.3"
  summary:
    agent_authored: 0
    agent_operator_unknown: 0
    changes: 1
    clean: 0
    findings: 0
    human_authored: 1
    indeterminate: 1
    with_findings: 0
  version: "0.3"
predicateType: "https://noru.tech/spec/ai-change-provenance/v0.3"
subject:
  - digest:
      gitCommit: head
    name: "github:acme/api:pr:421"
