tests/snapshots/cli__sarif_agent-operator-unknown.snap
---
source: tests/cli.rs
expression: value
---
$schema: "https://json.schemastore.org/sarif-2.1.0.json"
runs:
  - invocations:
      - executionSuccessful: true
    properties:
      assessments:
        - change_id: "github:acme/api:pr:421"
          reason: Effective human author is unknown; independence cannot be established.
          rule_id: ACC001
          status: unknown
        - change_id: "github:acme/api:pr:421"
          reason: Effective human author is unknown; independence cannot be established.
          rule_id: ACC002
          status: unknown
        - change_id: "github:acme/api:pr:421"
          reason: Effective human author is unknown; independence cannot be established.
          rule_id: ACC003
          status: unknown
        - change_id: "github:acme/api:pr:421"
          reason: Agent authorship is recorded but its human operator is unknown.
          rule_id: ACC006
          status: fail
        - change_id: "github:acme/api:pr:421"
          reason: No agent reviewed the current head.
          rule_id: ACC007
          status: not_applicable
        - change_id: "github:acme/api:pr:421"
          reason: A human approved the current head.
          rule_id: ACC008
          status: not_applicable
        - change_id: "github:acme/api:pr:421"
          reason: Agent approvals do not satisfy independence under this policy.
          rule_id: ACC009
          status: not_applicable
        - change_id: "github:acme/api:pr:421"
          reason: Agent approvals do not satisfy independence under this policy.
          rule_id: ACC010
          status: not_applicable
    results:
      - level: warning
        locations:
          - physicalLocation:
              artifactLocation:
                uri: "https://github.com/acme/api/pull/421"
        message:
          text: Agent authorship is recorded but its human operator is unknown.
        partialFingerprints:
          agentChangeControl/v1: acc-a77f6c869b9816b1
        properties:
          change_id: "github:acme/api:pr:421"
          disposition:
            decided_at: ~
            expires_at: ~
            owner: ~
            rationale: ~
            remediated_at: ~
            status: open
          provenance:
            - kind: observed
              ref: "https://api.github.com/repos/acme/api/pulls/421"
              source: github_api
            - kind: observed
              ref: "https://api.github.com/repos/acme/api/pulls/421/reviews/1"
              source: github_api
        ruleId: ACC006
    tool:
      driver:
        name: agent-change-control
        rules:
          - helpUri: "https://github.com/noru-tech/agent-change-control/blob/main/docs/rules/ACC001.md"
            id: ACC001
            name: agent_change_without_independent_human
            shortDescription:
              text: agent change without independent human
          - helpUri: "https://github.com/noru-tech/agent-change-control/blob/main/docs/rules/ACC002.md"
            id: ACC002
            name: approver_is_author
            shortDescription:
              text: approver is author
          - helpUri: "https://github.com/noru-tech/agent-change-control/blob/main/docs/rules/ACC003.md"
            id: ACC003
            name: merged_without_independent_approval
            shortDescription:
              text: merged without independent approval
          - helpUri: "https://github.com/noru-tech/agent-change-control/blob/main/docs/rules/ACC006.md"
            id: ACC006
            name: unknown_agent_operator
            shortDescription:
              text: unknown agent operator
          - helpUri: "https://github.com/noru-tech/agent-change-control/blob/main/docs/rules/ACC007.md"
            id: ACC007
            name: agent_approval_recorded
            shortDescription:
              text: agent approval recorded
          - helpUri: "https://github.com/noru-tech/agent-change-control/blob/main/docs/rules/ACC008.md"
            id: ACC008
            name: same_vendor_write_and_review
            shortDescription:
              text: same vendor write and review
          - helpUri: "https://github.com/noru-tech/agent-change-control/blob/main/docs/rules/ACC009.md"
            id: ACC009
            name: agent_approval_not_independent
            shortDescription:
              text: agent approval not independent
          - helpUri: "https://github.com/noru-tech/agent-change-control/blob/main/docs/rules/ACC010.md"
            id: ACC010
            name: agent_approval_unsigned
            shortDescription:
              text: agent approval unsigned
        version: 0.5.4
version: 2.1.0
