tests/snapshots/cli__sarif_incomplete-window.snap
---
source: tests/cli.rs
expression: value
---
$schema: "https://json.schemastore.org/sarif-2.1.0.json"
runs:
  - invocations:
      - executionSuccessful: false
    properties:
      assessments:
        - change_id: "github:acme/api:pr:421"
          reason: Effective author is not an agent.
          rule_id: ACC001
          status: not_applicable
        - change_id: "github:acme/api:pr:421"
          reason: Review collection is incomplete.
          rule_id: ACC002
          status: unknown
        - change_id: "github:acme/api:pr:421"
          reason: Review collection is incomplete; missing independent approval cannot be established.
          rule_id: ACC003
          status: unknown
        - change_id: "github:acme/api:pr:421"
          reason: Effective author is not an agent.
          rule_id: ACC006
          status: not_applicable
        - change_id: "github:acme/api:pr:421"
          reason: No agent reviewed the current head.
          rule_id: ACC007
          status: not_applicable
        - change_id: "github:acme/api:pr:421"
          reason: Effective author is not an agent.
          rule_id: ACC008
          status: not_applicable
        - change_id: "github:acme/api:pr:421"
          reason: Agent approvals do not satisfy independence under this policy.
          rule_id: ACC009
          status: not_applicable
        - change_id: "github:acme/api:pr:421"
          reason: Agent approvals do not satisfy independence under this policy.
          rule_id: ACC010
          status: not_applicable
    results: []
    tool:
      driver:
        name: agent-change-control
        rules:
          - id: ACC001
            name: agent_change_without_independent_human
            shortDescription:
              text: agent change without independent human
          - id: ACC002
            name: approver_is_author
            shortDescription:
              text: approver is author
          - id: ACC003
            name: merged_without_independent_approval
            shortDescription:
              text: merged without independent approval
          - id: ACC006
            name: unknown_agent_operator
            shortDescription:
              text: unknown agent operator
          - id: ACC007
            name: agent_approval_recorded
            shortDescription:
              text: agent approval recorded
          - id: ACC008
            name: same_vendor_write_and_review
            shortDescription:
              text: same vendor write and review
          - id: ACC009
            name: agent_approval_not_independent
            shortDescription:
              text: agent approval not independent
          - id: ACC010
            name: agent_approval_unsigned
            shortDescription:
              text: agent approval unsigned
        version: 0.5.4
version: 2.1.0
