tests/snapshots/cli__table_incomplete-window.snap
---
source: tests/cli.rs
expression: "String::from_utf8(table.stdout).unwrap()"
---
CHANGE                  AUTHOR        OPERATOR  RESULT
github:acme/api:pr:421  github:alice  -         UNKNOWN

1 changes evaluated
1 human-authored
0 agent-authored
0 agent operator unknown
0 clean
0 with findings
1 indeterminate
ACC001  agent_change_without_independent_human  0
ACC002  approver_is_author                      0
ACC003  merged_without_independent_approval     0
ACC006  unknown_agent_operator                  0
INCOMPLETE: Review collection unavailable
